--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 body {
     font-family: 'Roboto Mono', monospace;
   }
+
+#imgContainer img {
+    width: 70%;
+    height: auto;
+    margin: auto;
+    display: block;
+    
+  }
+
+
+#headerContainer img {
+    width: 70%;
+    height: auto;
+    display: block;
+    margin: auto;
+  }
